@@ -1,6 +1,7 @@
 package io.squashql.util;
 
 import io.squashql.query.ColumnarTable;
+import io.squashql.query.Header;
 import io.squashql.store.Field;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -55,7 +56,7 @@ public class TestMultipleColumnsSorter {
     int[] sort = MultipleColumnsSorter.sort(
             Arrays.asList(c1, c2, c3),
             Arrays.asList(o1, o2, naturalOrder()),
-            new int[]{-1, 0, -1});
+            new int[] {-1, 0, -1});
     Assertions.assertThat(sort).containsExactly(3, 2, 1, 0, 5, 6, 4);
   }
 
@@ -74,27 +75,26 @@ public class TestMultipleColumnsSorter {
 
   // To easily check the result.
   private void print(List<Object> c1, List<Object> c2, List<Object> c3, int[] sort) {
-    List<Field> headers = Arrays.asList(
-            new Field("c1", String.class),
-            new Field("c2", String.class),
-            new Field("c3", String.class));
-    new ColumnarTable(headers, Collections.emptyList(), new int[0], new int[0], List.of(c1, c2, c3))
+    List<Header> headers = Arrays.asList(
+            new Header(new Field("c1", String.class), false),
+            new Header(new Field("c2", String.class), false),
+            new Header(new Field("c3", String.class), false));
+    new ColumnarTable(headers, Collections.emptySet(), List.of(c1, c2, c3))
             .show();
 
-    new ColumnarTable(headers, Collections.emptyList(), new int[0], new int[0],
+    new ColumnarTable(headers, Collections.emptySet(),
             List.of(reorder(c1, sort), reorder(c2, sort), reorder(c3, sort)))
             .show();
   }
 
   private void print(List<Object> c1, List<Object> c2, int[] sort) {
-    List<Field> headers = Arrays.asList(
-            new Field("c1", String.class),
-            new Field("c2", String.class));
-    new ColumnarTable(headers, Collections.emptyList(), new int[0], new int[0], List.of(c1, c2))
+    List<Header> headers = Arrays.asList(
+            new Header(new Field("c1", String.class), false),
+            new Header(new Field("c2", String.class), false));
+    new ColumnarTable(headers, Collections.emptySet(), List.of(c1, c2))
             .show();
 
-    new ColumnarTable(headers, Collections.emptyList(), new int[0], new int[0],
-            List.of(reorder(c1, sort), reorder(c2, sort)))
+    new ColumnarTable(headers, Collections.emptySet(), List.of(reorder(c1, sort), reorder(c2, sort)))
             .show();
   }
 }
